# Svelte-Tauri

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  CHANGELOG.md  LICENSE  README.md  SyncVersion.ts  TODO.md  components.json  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.changeset/: poor-falcons-buy.md  slow-spiders-compare.md  sweet-berries-fly.md
.github/: dependabot.yml
.github/workflows/: changeset.yml  clippy.yml  publish.yml  release.yml  test.yml
.husky/: pre-commit
src/: App.svelte  main.ts  styles.pcss  styles.postcss  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  main.rs  prelude.rs  state.rs
src/lib/: Index.svelte  bindings.ts  ipc.ts  types.ts  utils.ts
src/lib/components/: CallTauri.svelte  HashInput.svelte  Header.svelte  ThemeToggleIcon.svelte  Versions.svelte
src/lib/components/IPC/: CallTauri.svelte  HashString.svelte  KeyValuePair.svelte
src/lib/components/buttons/: ThemeToggleIcon.svelte
src/lib/components/footer/: Footer.svelte
src/lib/components/header/: Header.svelte
src/lib/components/nav/: HeaderNav.svelte  HorizontalNav.svelte
src/lib/components/transition/: Transition.svelte
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte  index.ts
src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte  index.ts
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-header.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte  index.ts
src/lib/components/ui/aspect-ratio/: aspect-ratio.svelte  index.ts
src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
src/lib/components/ui/badge/: badge.svelte  index.ts
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/calendar/: calendar-cell.svelte  calendar-day.svelte  calendar-grid-body.svelte  calendar-grid-head.svelte  calendar-grid-row.svelte  calendar-grid.svelte  calendar-head-cell.svelte  calendar-header.svelte  calendar-heading.svelte  calendar-months.svelte  calendar-next-button.svelte  calendar-prev-button.svelte  calendar.svelte  index.ts
src/lib/components/ui/card/: card-title.svelte  card.svelte
src/lib/components/ui/carousel/: carousel-content.svelte  carousel-item.svelte  carousel-next.svelte  carousel-previous.svelte  carousel.svelte  context.ts  index.ts
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/collapsible/: collapsible-content.svelte  index.ts
src/lib/components/ui/command/: command-dialog.svelte  command-empty.svelte  command-group.svelte  (+6 more)
src/lib/data/: NavLinks.ts
src/lib/example/call-tauri/: CallTauri.svelte
src/lib/example/footer/: Footer.svelte
src/lib/example/header/: Header.svelte  ThemeToggleIcon.svelte
src/lib/layout/: BaseHeader.svelte  BaseLayout.svelte
src/lib/router/: Router.svelte
src/lib/router/routes/: CallTauri.svelte  HashString.svelte  Home.svelte  IPC.svelte  Index.svelte  Versions.svelte
src/lib/stores/: theme.ts
src/styles/: app.postcss  app.scss  variables.scss
(+130 files in other folders)
