[package]
name = "svelte-tauri"
version = "0.2.1"
description = "Svelte-Tauri template starter"
authors = ["Fractal-Tess"]
license = "MIT"
repository = "https://github.com/Fractal-Tess/Svelte-Tauri"
default-run = "svelte-tauri"
edition = "2021"
rust-version = "1.71.1"

[build-dependencies.tauri-build]
version = "1.5.1"
features = []

[dependencies]
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.56"
specta = "1.0.5"

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.serde]
version = "1.0.196"
features = ["derive"]

[dependencies.tauri]
version = "1.5.4"
features = ["api-all", "devtools", "updater"]

[dependencies.tauri-specta]
version = "1.0.2"
features = ["javascript", "typescript"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
